# parallel_text_breaker

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  RuiCai-Project-proposal.md  presentation.aux  presentation.nav  presentation.tex  presentation.toc  presentation.vrb
data/: README.md  large_sample_text.txt  sample_text.txt  wiki_titles.txt
include/: text_processor.hpp  utils.hpp
src/: main.cpp  text_processor.cpp  utils.cpp
tests/: CMakeLists.txt  test_text_processor.cpp
